# simple_status

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
simple_status/: __init__.py  client.py
