[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_status"
version = "0.1.0"
description = "Simple Discord Rich Presence helper for Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pypresence"]
authors = [{ name = "Toasterclan1" }]

[project.urls]
Homepage = "https://github.com/Toasterclan1/simple_status"
